# DeepImpact

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  ProjectDescription.ipynb  README.md  pyproject.toml  references.md
.github/workflows/: ruff_black.yml  tests.yml
deepimpact/: __init__.py  mapping.py  plot_graphs.py  solver.py  utils.py
docs/source/: conf.py  index.rst
examples/: example.py
tests/: scenario.npz  solver_atm_entry_tests.py  test_deepimpact.py
