[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "deepimpact"
description = "Asteroid atmospheric entry solver"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.13.0",
    "scipy",
    "sympy",
    "pandas",
    "matplotlib",
    "mpltools",
    "pytest",
    "pytest-timeout",
    "sphinx",
    "dask",
    "distributed",
    "gdown",
    "build>=1.3.0",
]

[tool.setuptools]
packages = ["deepimpact"]

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[project.optional-dependencies]
dev = [
    "black>=25.11.0",
    "ruff>=0.14.5",
    "pytest-cov",
]
